--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
         "dev:connector": "tsx watch connector/src/server.ts",
         "dev:sandbox": "tsx watch sandbox/src/server.ts",
         "dev:exporter": "tsx watch exporter/src/server.ts",
+        "dev:socket": "tsx watch socket/src/server.ts",
         "dev": "concurrently \"npm:dev:*\"",
         "build:connector": "tsc -p connector/tsconfig.json",
         "build:sandbox": "tsc -p sandbox/tsconfig.json",
         "build:exporter": "tsc -p exporter/tsconfig.json",
-        "build": "npm run build:connector && npm run build:sandbox && npm run build:exporter",
+        "build:socket": "tsc -p socket/tsconfig.json",
+        "build": "npm run build:connector && npm run build:sandbox && npm run build:exporter && npm run build:socket",
         "start:connector": "node connector/dist/src/server.js",
         "start:sandbox": "node sandbox/dist/src/server.js",
-        "start:exporter": "node exporter/dist/src/server.js"
+        "start:exporter": "node exporter/dist/src/server.js",
+        "start:socket": "node socket/dist/src/server.js"
     },
     "dependencies": {
+        "@google/genai": "^1.34.0",
         "@modelcontextprotocol/sdk": "^1.25.1",
         "@types/jsdom": "^27.0.0",
         "archiver": "^7.0.1",
@@ -28,6 +32,7 @@
         "jsdom": "^27.3.0",
         "simple-git": "^3.30.0",
         "thirdweb": "^5.116.1",
+        "ws": "^8.18.0",
         "zod": "^4.2.1"
     },
     "devDependencies": {
@@ -36,6 +41,7 @@
         "@types/dockerode": "^3.3.47",
         "@types/express": "^5.0.6",
         "@types/node": "^25.0.3",
+        "@types/ws": "^8.5.13",
         "concurrently": "^9.2.1",
         "tsx": "^4.21.0",
         "typescript": "^5.9.3"
