small Socket fixed and updated deps. Redeploying

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /connector/scripts/test-commands.ts
 /connector/scripts/test-extraction.ts
 /connector/scripts/README.md
+/connector/scripts/mcp-compiler
