--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
         "start:connector": "node connector/dist/src/server.js",
         "start:sandbox": "node sandbox/dist/src/server.js",
         "start:exporter": "node exporter/dist/src/server.js",
-        "start:socket": "node socket/dist/src/server.js"
+        "start:socket": "node socket/dist/src/server.js",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:coverage": "vitest run --coverage"
     },
     "dependencies": {
         "@crypto.com/facilitator-client": "^1.0.4",
@@ -46,9 +49,12 @@
         "@types/express": "^5.0.6",
         "@types/node": "^25.2.1",
         "@types/qrcode": "^1.5.6",
+        "@types/supertest": "^6.0.3",
         "@types/ws": "^8.18.1",
         "concurrently": "^9.2.1",
+        "supertest": "^7.2.2",
         "tsx": "^4.21.0",
-        "typescript": "^5.9.3"
+        "typescript": "^5.9.3",
+        "vitest": "^4.0.18"
     }
 }
