--- a/package.json
+++ b/package.json
@@ -5,17 +5,14 @@
     "type": "module",
     "scripts": {
         "dev:connector": "tsx watch connector/src/server.ts",
-        "dev:sandbox": "tsx watch sandbox/src/server.ts",
         "dev:exporter": "tsx watch exporter/src/server.ts",
         "dev:socket": "tsx watch socket/src/server.ts",
         "dev": "concurrently \"npm:dev:*\"",
         "build:connector": "tsc -p connector/tsconfig.json",
-        "build:sandbox": "tsc -p sandbox/tsconfig.json",
         "build:exporter": "tsc -p exporter/tsconfig.json",
         "build:socket": "tsc -p socket/tsconfig.json",
-        "build": "npm run build:connector && npm run build:sandbox && npm run build:exporter && npm run build:socket",
+        "build": "npm run build:connector && npm run build:exporter && npm run build:socket",
         "start:connector": "node connector/dist/src/server.js",
-        "start:sandbox": "node sandbox/dist/src/server.js",
         "start:exporter": "node exporter/dist/src/server.js",
         "start:socket": "node socket/dist/src/server.js",
         "test": "vitest run",
@@ -24,21 +21,21 @@
     },
     "dependencies": {
         "@crypto.com/facilitator-client": "^1.0.4",
-        "@google/genai": "^1.40.0",
-        "@modelcontextprotocol/sdk": "^1.26.0",
-        "@types/jsdom": "^27.0.0",
+        "@google/genai": "^1.43.0",
+        "@modelcontextprotocol/sdk": "^1.27.1",
+        "@types/jsdom": "^28.0.0",
         "@whiskeysockets/baileys": "^7.0.0-rc.9",
         "archiver": "^7.0.1",
         "cors": "^2.8.6",
         "dockerode": "^4.0.9",
-        "dotenv": "^17.2.4",
+        "dotenv": "^17.3.1",
         "eventsource": "^4.1.0",
         "express": "^5.2.1",
-        "jsdom": "^28.0.0",
+        "jsdom": "^28.1.0",
         "qrcode": "^1.5.4",
-        "redis": "^5.10.0",
-        "simple-git": "^3.30.0",
-        "thirdweb": "^5.118.1",
+        "redis": "^5.11.0",
+        "simple-git": "^3.32.3",
+        "thirdweb": "^5.119.0",
         "ws": "^8.19.0",
         "zod": "^4.3.6"
     },
@@ -47,9 +44,9 @@
         "@types/cors": "^2.8.19",
         "@types/dockerode": "^4.0.1",
         "@types/express": "^5.0.6",
-        "@types/node": "^25.2.1",
+        "@types/node": "^25.3.3",
         "@types/qrcode": "^1.5.6",
-        "@types/supertest": "^6.0.3",
+        "@types/supertest": "^7.2.0",
         "@types/ws": "^8.18.1",
         "concurrently": "^9.2.1",
         "supertest": "^7.2.2",
